syntax = "proto3";
package terra.wasm.v1beta1;

// Terra-Classic-specific fork, used only by Terra Classic
// Src: https://github.com/terra-money/core/blob/main/proto/terra/wasm/v1beta1/tx.proto
// original in https://github.com/CosmWasm/wasmd/blob/master/proto/cosmwasm/wasm/v1/tx.proto

import "coin.proto";

// MsgExecuteContract submits the given message data to a smart contract
message MsgExecuteContract {
    // Sender is the that actor that signed the messages
    string sender = 1;
    // Contract is the address of the smart contract
    string contract = 2;
    // ExecuteMsg json encoded message to be passed to the contract
    bytes execute_msg = 3;
    // Coins that are transferred to the contract on execution
    // Gap in field numbering is intentional
    repeated cosmos.base.v1beta1.Coin coins = 5;
}
